Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-28241

Datatype bits are not stored correctly in passive compression mode

    XMLWordPrintable

Details

    • Untriaged
    • Centos 64-bit
    • No

    Description

      Build 5.5.0-1911.

      Setup:

      • 1 node
      • 1 bucket (passive compression mode)

      Steps:

      ./bin/cbc-pillowfight --num-items 1 --batch-size 1 --json --compress --compress --populate-only --spec couchbase://172.23.133.13/bucket-1?password=password
      

      According to tcpdump, libcouchbase sets the bits correctly (see attachments).

      However, cbstats shows only datatype SNAPPY:

      /opt/couchbase/bin/cbstats -b bucket-1 -p password 127.0.0.1:11210 all | grep ep_active_datatype
       ep_active_datatype_json:                               0
       ep_active_datatype_json,xattr:                         0
       ep_active_datatype_raw:                                0
       ep_active_datatype_snappy:                             1
       ep_active_datatype_snappy,json:                        0
       ep_active_datatype_snappy,json,xattr:                  0
       ep_active_datatype_snappy,xattr:                       0
       ep_active_datatype_xattr:                              0
      

       /opt/couchbase/bin/cbstats -b bucket-1 -p password 127.0.0.1:11210 all | grep ep_compression_mode
       ep_compression_mode:                                   passive
      

      2018-02-19T13:37:53.542284Z INFO 197: HELO [libcouchbase/2.8.4_25_ge071696e (Linux-4.14.18-300.fc27.x86_64; x86_64; GNU 7.3.1)] TCP nodelay, XATTR, XERROR, Select bucket, Snappy, JSON [ 10.17.5.113:51584 - 172.23.133.13:11210 (not authenticated) ]
      

      Attachments

        1. datatype.png
          datatype.png
          181 kB
        2. datatype.pcap
          18 kB
        3. cbcollect_info.zip
          17.48 MB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              sriram Sriram Ganesan (Inactive)
              pavelpaulau Pavel Paulau (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty