MB-28241: check for JSON datatype after inflating snappy data

If the server receives compressed data, then the data needs
to inflated to check for the JSON datatype

Change-Id: Ieb5d952dcc8310ebcfd9b2b223253952d06c08b5
Reviewed-on: http://review.couchbase.org/89705
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>